--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.2",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
+    "nodemailer": "^6.9.9",
     "payload": "^2.10.0",
     "react": "^18",
     "react-dom": "^18",
