--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "resend": "^3.1.0",
     "sonner": "^1.4.0",
     "stripe": "^14.16.0",
     "swiper": "^11.0.6",
