--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "swiper": "^11.0.6",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "yarn": "^1.22.21",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
@@ -60,6 +61,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "copyfiles": "^2.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "nodemon": "^3.0.3",
